--- a/front-end/antd-app/package.json
+++ b/front-end/antd-app/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.6.3",
     "axios": "^0.20.0",
     "bizcharts": "^4.0.14",
+    "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
